--- a/src/styles.css
+++ b/src/styles.css
@@ -27,15 +27,43 @@
 .price {
   font-weight: bold;
 }
-
+.boxbutton {
+  display: inline-block;
+  border: solid;
+  border-color: whitesmoke;
+  width: 15%;
+  text-align: center;
+}
 .addsub {
   border: none;
   background: linear-gradient(to bottom, #9be2fe 0%, #67d1fb 100%);
   font-size: 1rem;
-  margin-top: 5px;
+  margin-top: 10px;
+  margin: 1rem;
 }
 
 .top {
   display: flex;
+  align-items: flex-end;
   justify-content: space-between;
+  margin-top: 10px;
+}
+
+.remove {
+  border: none;
+  font-size: 1rem;
+  background: transparent;
+  color: silver;
+}
+
+.checkout {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  font-size: 2rem;
+}
+.out {
+  background-color: orange;
+  border: none;
+  padding: 1rem;
 }
